# alemanes

./: Cargo.toml  README.md
.github/workflows/: create_tag_and_release.yml
resources/: dicionario_de_ptbr.txt
src/: lib.rs  main.rs
tests/: health_check.rs
