[package]
name = "alemanes"
version = "0.1.0"
authors = ["Mateus Costa mateuscomp@gmail.com"]
edition = "2018"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "alemanes"

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"

[dev-dependencies]
reqwest = "0.10.10"
tokio = "0.2.22"
